--- a/index.html
+++ b/index.html
@@ -1,3 +1,52 @@
-<DOCTYPE html>
-  <html>
-  </html>
+<!DOCTYPE html>
+<html>
+<main>
+
+  <head>
+    <link href="C:\Users\tecjo\Documents\GitHub\Dasmotos-arts\style.css" rel="stylesheet">
+    <title>Dasdemon art</title>
+  </head>
+
+  <body>
+    <header>
+      <h1>Dasmoto´s Arts & Crafts</h1>
+    </header>
+    <section>
+      <h2 id="brushes">Brushes</h2>
+      <figure>
+        <img src="images/hacksaw.jpeg" alt="" />
+      </figure>
+      <h3>Hacksaw Brushes</h3>
+      <article>
+        <p>Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in
+          large amounts.Available in diferent sizes.<span class="price">Starting at $3.00 / brush.</span></p>
+      </article>
+    </section>
+    <section>
+      <h2 id="frames">Frames</h2>
+      <figure>
+        <img src="images/frames.jpeg" alt="" />
+      </figure>
+      <h3>Art Frames (assorted)</h3>
+      <article>
+        <p>Assorted frames made of different material, including MDF, birchwood, and PDE.Select frames can be sanded and
+          painted according to your needs<span class="price">Starting at $2.00 / frame.</span></p>
+      </article>
+    </section>
+    <section>
+      <h2 id="paint">paint</h2>
+      <figure>
+        <img src="images/finnish.jpeg" alt="" />
+      </figure>
+      <h3>Clean Finnish Paint</h3>
+      <article>
+        <p>Imported paint from Finland.Over 256 colors available in-store, varying in quantity(1 oz. to 8 oz.). Clean
+          Finnish paint microbinds to canvas, increasing the finish longevity of any artwork.<span
+            class="price">Starting at $5.00 / tube.</span></p>
+      </article>
+    </section>
+
+  </body>
+</main>
+
+</html>
