--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 
   <head>
-    <link href="C:\Users\tecjo\Documents\GitHub\Dasmotos-arts\style.css" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
     <title>Dasdemon art</title>
   </head>
   <main>
